# archspec

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
cmake/: archspec.pc.in  archspecConfig.cmake.in
docs/: COMPARISON.md  LLM_USAGE.md  PACKAGING_PLAN.md  PYTHON_API.md
examples/: summary.cc
include/: aview.hh
include/archspec/: archspec.hpp
python/archspec_inspect/: __init__.py  _native.cc
schema/: archspec-report-v1.schema.json
src/: aview.cc  block.cc  cache.cc  core.cc  cpu.cc  gpu.cc  internal.hh  isa.cc  json.cc  memory.cc  net.cc  os.cc  pci.cc  perf.cc  platform.cc  power.cc  thermal.cc  virtualization.cc
tests/: core_tests.cc  python_tests.py
tools/: archspec-inspect.cc
